crates/engram-cli/tests/snapshots/renderer/engram_cli__output__tests__success__json.snap
---
source: crates/engram-cli/src/output.rs
expression: rendered
---
--- stdout ---
{"message":"it worked","success":true}
--- stderr ---
