crates/engram-cli/tests/snapshots/renderer/engram_cli__output__tests__success__plain.snap
---
source: crates/engram-cli/src/output.rs
expression: rendered
---
--- stdout ---
it worked
--- stderr ---
