crates/engram-cli/tests/snapshots/renderer/engram_cli__output__tests__success__pretty_color.snap
---
source: crates/engram-cli/src/output.rs
expression: rendered
---
--- stdout ---
<green>✓</green> <green>it worked</green>
--- stderr ---
